<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.easypark.easypark.garage_c"
    tools:layout_editor_absoluteY="81dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/heading1"
                android:layout_width="146dp"
                android:layout_height="42dp"
                android:layout_marginTop="16dp"
                android:text="@string/GarageC"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ProgressBar
                android:id="@+id/mBar1"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
                android:layout_width="250dp"
                android:layout_height="41dp"
                android:layout_marginTop="40dp"
                android:clickable="false"
                android:indeterminate="false"
                android:max="100"
                android:scaleY="11"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/heading1" />

            <ProgressBar
                android:id="@+id/mBar2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="250dp"
                android:layout_height="41dp"
                android:layout_marginTop="32dp"
                android:max="100"
                android:scaleY="11"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mBar1" />

            <ProgressBar
                android:id="@+id/mBar3"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="250dp"
                android:layout_height="41dp"
                android:layout_marginTop="32dp"
                android:scaleY="11"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mBar2" />

            <ProgressBar
                android:id="@+id/mBar4"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="250dp"
                android:layout_height="41dp"
                android:layout_marginTop="32dp"
                android:scaleY="11"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mBar3" />

            <Button
                android:id="@+id/mButton1"
                android:layout_width="250dp"
                android:layout_height="41dp"
                android:layout_marginTop="40dp"
                android:background="#00FFFFFF"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/Floor1"
                android:textSize="22sp"
                android:typeface="normal"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/heading1" />

            <Button
                android:id="@+id/mButton2"
                android:layout_width="250dp"
                android:layout_height="41dp"
                android:layout_marginTop="32dp"
                android:background="#00FFFFFF"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/Floor2"
                android:textSize="22sp"
                android:typeface="normal"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mButton1" />

            <Button
                android:id="@+id/mButton3"
                android:layout_width="250dp"
                android:layout_height="41dp"
                android:layout_marginTop="32dp"
                android:background="#00FFFFFF"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/Floor3"
                android:textSize="22sp"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mButton2"/>

            <Button
                android:id="@+id/mButton4"
                android:layout_width="250dp"
                android:layout_height="41dp"
                android:layout_marginTop="32dp"
                android:background="#00FFFFFF"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/Floor4"
                android:textSize="22sp"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mButton3"/>

            <TextView
                android:id="@+id/textP1"
                android:layout_width="40dp"
                android:layout_height="41dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="98dp"
                android:text="@string/zeroPercent"
                android:textSize="22sp"
                app:layout_constraintStart_toEndOf="@+id/mBar1"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="8dp" />

            <TextView
                android:id="@+id/textP2"
                android:layout_width="40dp"
                android:layout_height="41dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/zeroPercent"
                android:textSize="22sp"
                app:layout_constraintStart_toEndOf="@+id/mBar2"
                app:layout_constraintTop_toBottomOf="@+id/textP1"
                android:layout_marginLeft="8dp" />

            <TextView
                android:id="@+id/textP3"
                android:layout_width="40dp"
                android:layout_height="41dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/zeroPercent"
                android:textSize="22sp"
                app:layout_constraintStart_toEndOf="@+id/mBar3"
                app:layout_constraintTop_toBottomOf="@+id/textP2"
                android:layout_marginLeft="8dp" />

            <TextView
                android:id="@+id/textP4"
                android:layout_width="40dp"
                android:layout_height="41dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/zeroPercent"
                android:textSize="22sp"
                app:layout_constraintStart_toEndOf="@+id/mBar4"
                app:layout_constraintTop_toBottomOf="@+id/textP3"
                android:layout_marginLeft="8dp" />

            <TextView
                android:id="@+id/textS1"
                android:layout_width="40dp"
                android:layout_height="41dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/zero"
                android:textSize="22sp"
                app:layout_constraintEnd_toStartOf="@+id/mBar1"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:layout_marginRight="8dp" />

            <TextView
                android:id="@+id/textS2"
                android:layout_width="40dp"
                android:layout_height="41dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/zero"
                android:textSize="22sp"
                app:layout_constraintEnd_toStartOf="@+id/mBar2"
                app:layout_constraintTop_toBottomOf="@+id/textS1"
                android:layout_marginRight="8dp" />

            <TextView
                android:id="@+id/textS3"
                android:layout_width="40dp"
                android:layout_height="41dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/zero"
                android:textSize="22sp"
                app:layout_constraintEnd_toStartOf="@+id/mBar3"
                app:layout_constraintTop_toBottomOf="@+id/textS2"
                android:layout_marginRight="8dp" />

            <TextView
                android:id="@+id/textS4"
                android:layout_width="40dp"
                android:layout_height="41dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/zero"
                android:textSize="22sp"
                app:layout_constraintEnd_toStartOf="@+id/mBar4"
                app:layout_constraintTop_toBottomOf="@+id/textS3"
                android:layout_marginRight="8dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="48dp"
                android:layout_height="41dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="44dp"
                android:text="@string/VacantSpots"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="16dp" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>


